--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "headers": [
       {
-        "source": "/",
+        "source": "/index.worker.js",
         "headers": [
           {
             "key": "Cross-Origin-Embedder-Policy",
