Update json with propper headers

--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,32 @@
             "value": "same-origin"
           }
         ]
+      },
+      {
+        "source": "/index.pck",
+        "headers":[
+            {
+                "key": "Content-Type",
+                "value": "application/octet-stream"
+            }
+        ]
+      },
+      {
+        "source": "/index.worker.js",
+        "headers": [
+            {
+                "key": "Access-Control-Allow-Origin",
+                "value": "*"
+            },
+            {
+                "key": "Access-Control-Allow-Methods",
+                "value": "GET,OPTIONS"
+            },
+            {
+                "key": "Access-Control-Allow-Headers",
+                "value": "Content-Type"
+            }
+        ]
       }
     ]
   }
