--- a/vercel.json
+++ b/vercel.json
@@ -5,11 +5,11 @@
         "headers": [
           {
             "key": "Cross-Origin-Embedder-Policy",
-            "value": "require-corp"
+            "value": "same-origin"
           },
           {
             "key": "Cross-Origin-Opener-Policy",
-            "value": "same-origin"
+            "value": "credentialless"
           }
         ]
       },
