--- a/vercel.json
+++ b/vercel.json
@@ -4,40 +4,41 @@
         "source": "/",
         "headers": [
           {
-            "key": "Cross-Origin-Embedder-Policy",
-            "value": "require-corp"
+            "key": "Cross-Origin-Opener-Policy",
+            "value": "same-origin"
           },
           {
-            "key": "Cross-Origin-Opener-Policy",
+            "key": "Cross-Origin-Embedder-Policy",
             "value": "require-corp"
           }
         ]
       },
       {
         "source": "/index.pck",
-        "headers":[
-            {
-                "key": "Content-Type",
-                "value": "application/octet-stream"
-            }
+        "headers": [
+          {
+            "key": "Content-Type",
+            "value": "application/octet-stream"
+          }
         ]
       },
       {
         "source": "/index.worker.js",
         "headers": [
-            {
-                "key": "Access-Control-Allow-Origin",
-                "value": "*"
-            },
-            {
-                "key": "Access-Control-Allow-Methods",
-                "value": "GET,OPTIONS"
-            },
-            {
-                "key": "Access-Control-Allow-Headers",
-                "value": "Content-Type"
-            }
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET,OPTIONS"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "Content-Type"
+          }
         ]
       }
     ]
   }
+  
