--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
         "headers": [
           {
             "key": "Access-Control-Allow-Origin",
-            "value": "*"
+            "value": "https://godot-web-xr-demo.vercel.app/"
           },
           {
             "key": "Access-Control-Allow-Methods",
